fix markdown image caused element overflow

--- a/src/app/components/cards/Comment.scss
+++ b/src/app/components/cards/Comment.scss
@@ -1,4 +1,5 @@
 .Comment {
+  overflow: hidden;
   position: relative;
   clear: both;
   margin-bottom: 1.2rem;
